--- a/src/pages/what-we-do/livelihood/Livelihood.css
+++ b/src/pages/what-we-do/livelihood/Livelihood.css
@@ -9,7 +9,7 @@
 }
 .education-content {
   text-align: justify;
-  text-align-last: left; /* Reset text-align-last to left for better compatibility */
+  text-align-last: left; 
 }
 .work-image {
   max-width: 100%;
@@ -26,12 +26,10 @@
 h1 {
   padding: 2rem;
   font-size: 5rem;
-  /* color: red; */
 }
 
 h2 {
   font-size: 2.5rem;
-  /* display: flex; */
   text-decoration: underline;
 }
 
@@ -62,19 +60,18 @@ p {
   background-color: #f0f07f;
 }
 
-/* Style the heading */
+
 .education-li h3 {
-  font-size: 1.5rem; /* Adjust heading font size */
-  text-align: center; /* Center the heading */
+  font-size: 1.5rem;
+  text-align: center;
   text-decoration: underline;
-  margin-bottom: 1rem; /* Add some space below the heading */
+  margin-bottom: 1rem;
 }
 
-/* Style the content */
 .education-li div {
-  font-size: 1.2rem; /* Adjust content font size */
-  text-align: center; /* Center the content */
-  line-height: 1.4; /* Increase line spacing for readability */
+  font-size: 1.2rem;
+  text-align: center;
+  line-height: 1.4;
 }
 
 
