--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,7 +6,14 @@
     justify-content: center;
     align-items: center;
   }
-  
+  .white{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
   .footer-subscription {
     display: flex;
     flex-direction: column;
