--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,9 +1,12 @@
+
 .about-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 2rem 10rem ;
   background-color: white;
+  text-align: center;
 }
 h1 {
   padding: 2rem;
