--- a/src/components/team/Team.css
+++ b/src/components/team/Team.css
@@ -1,17 +1,50 @@
-.team-card-container{
+.team-area{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.team-card-container {
     background-color: white;
     padding: 2rem;
 }
-.team-card{
-    width: 20rem;
+
+.team-card {
+    width: 18rem;
+    height: 25rem;
     border: solid 1px black;
-    border-radius: 0.7rem 0.7rem 0 0 ;
+    border-radius: 0.7rem;
+    display: grid;
+    grid-template-rows: 4fr 1fr; /* 3/4 for the image, 1/4 for the content */
+    overflow: hidden; /* Add this to hide overflowing content */
+}
+
+.team-image {
+    margin: auto;
+    max-width: 100%; /* Ensure the image does not exceed its container width */
+    max-height: 100%; /* Ensure the image does not exceed its container height */
+    width: auto; /* Maintain aspect ratio */
+    height: auto; /* Maintain aspect ratio */
+    border-radius: 0.7rem 0.7rem 0 0;
+}
+
+.team-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    /* padding: 1rem; */
+    box-sizing: border-box;
+    background-color: #f2f2f2;
+    border-radius: 0 0 0.7rem 0.7rem;
 }
-.team-image{
-    /* width: 100%; */
-    height: 100%;
-    border-radius: 0.7rem;
-    margin: 1rem;
+
+.team-name {
+    padding: 0;
+    font-weight: bold;
+}
+
+.team-title {
+    padding: 0;
+
+    color: gray;
 }
